testsuite/tests/typecheck/should_fail/tcfail090.hs
{-# LANGUAGE MagicHash #-}

module ShouldFail where

import GHC.Base

die :: Int -> ByteArray#
die _ = undefined
